player action buttons should no longer be covered by input field. addresses 3206

--- a/app/assets/volume/slot.styl
+++ b/app/assets/volume/slot.styl
@@ -380,7 +380,8 @@
   background-color white
   position absolute
   right 0
-  padding b8 b2
+  padding 2px b2
+  z-index 1
 
 .player-action-icon
   display inline-block
